# localization

./: .gitignore  README.md  pyproject.toml  setup.py
i18nilize/: LICENSE.txt  integration_test.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup_temp.cfg
i18nilize/localization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
i18nilize/src/internationalize/: api_helpers.py  command_line.py  diffing_processor.py  error_handler.py  generate_file.py  globals.py  helpers.py  localize.py  location_singleton.py  package_init_utils.py  package_setup.py  parser.py  project_root_utils.py  sync_processor.py  test.py  test_json.json
i18nilize/src/internationalize/diff_state/translations/: localize.py
i18nilize/src/internationalize/languages/: spanish.json
i18nilize/src/internationalize/resources/: languages.json
i18nilize/src/localization/: globals.py  helpers.py  localize.py  package_init_utils.py  sync_processor.py
i18nilize/src/localization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
i18nilize/src/localization/languages/: chinese.json  french.json
i18nilize/tests/: test_api_helpers.py  test_cli.py  test_diffing.py  test_error_handler.py  test_generate_file.py  test_localize.py  test_parse_json.py  test_read_file.py
i18nilize/tests/resources/: test_invalid_json.json  test_many_json.json  test_no_token.json  test_no_translations.json
i18nilize/tests/resources/diffing_algorithm/basic_modified_translations/: spanish.json
i18nilize/tests/resources/error_handling/: expected.json
i18nilize/tests/resources/modified_translations/: italian.json  spanish.json
i18nilize/tests/resources/test_translations/: spanish.json
i18nilize/tests/util/: test_diffing_util.py
(+50 files in other folders)
