[project]
name = "localization"
version = "1.0.0"
description = "A localization package for microservices"
authors = [
    {name = "UBC Launchpad",email = "strategy@ubclaunchpad.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (==2.32.3)",
    "geocoder (>=1.38.1)",
    "geopy (>=2.2.0)",
    "babel (>=2.9.1)",
    "dirsync (>=2.2.5)",
    "asgiref (==3.8.1)",
    "certifi (==2024.8.30)",
    "charset-normalizer (==3.4.0)",
    "django (==5.1.1)",
    "djangorestframework (==3.15.2)",
    "idna (==3.10)",
    "sqlparse (==0.5.1)",
    "urllib3 (==2.2.3)",
]

[tool.poetry]
packages = [{ include = "i18nilize", from = "." }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
